--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "fft-rsqnxjv"
+name = "wasm-spectrogram"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-hound = "3.5.1"
 image = "0.25.1"
-rand = "0.8.5"
 rustfft = "6.2.0"
+wasm-bindgen = "0.2.92"
