--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-image = "0.25.1"
 rustfft = "6.2.0"
 wasm-bindgen = "0.2.92"
+wee_alloc = "0.4.5"
