--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-rustfft = "6.2.0"
+rustfft = { version = "6.2.0", features = ["wasm_simd"]}
 wasm-bindgen = "0.2.92"
 wee_alloc = "0.4.5"
