refactor sliders, clean up code, add license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "wasm-spectrogram"
 version = "0.1.0"
 edition = "2021"
+description = "wasm-based spectrogram generation"
+repository = "https://github.com/EmNudge/rust-wasm-spectrogram"
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
