--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,9 +24,8 @@ jobs:
         uses: cloudflare/pages-action@v1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: YOUR_ACCOUNT_ID
-          projectName: YOUR_PROJECT_NAME
-          directory: YOUR_BUILD_OUTPUT_DIRECTORY
+          accountId: ${{ env.CF_ACCOUNT_ID }}
+          projectName: wasm-spectrogram
+          directory: demo
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          workingDirectory: demo
           wranglerVersion: '3'
